# big-talk

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
example/: project.json  pyproject.toml
example/src/: __main__.py
example/src/example/: main.py
example/src/example/routers/: __init__.py  chat_router.py  talk_router.py
example/tests/: conftest.py  test_chat.py  test_talk.py
libs/big-talk/: README.md  project.json  pyproject.toml
libs/big-talk/src/big_talk/: __init__.py  big_talk.py  loop.py  message.py  serialization.py  stream.py  stream_context.py  stream_handler.py  stream_iteration.py  stream_middleware.py  stream_result.py  streaming.py  tool.py  tool_execution.py
libs/big-talk/src/big_talk/llm/: __init__.py  anthropic.py  anthropic_provider.py  llm.py  llm_provider.py  llm_provider_factory.py  openai.py  openai_provider.py
libs/big-talk/src/big_talk/middleware/: __init__.py  middleware.py  middleware_handler.py  middleware_stack.py
libs/big-talk/src/big_talk/streaming/: __init__.py  stream_context.py  stream_handler.py  stream_middleware.py
libs/big-talk/tests/: conftest.py  helpers.py  test_anthropic_provider.py  test_bigtalk.py  test_hidden_dependency_injection.py  test_manual_tool_execution.py  test_middleware.py  test_openai_provider.py  test_tool_execution.py  test_tool_formatting.py  test_tool_metadata.py  test_tool_schema.py  test_tools.py
