[project]
name = "example"
version = "0.0.0"
description = "My awesome Python library"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.13"
dependencies = [
    "dinkleberg[fastapi]>=1.1.4",
    "fastapi[standard]>=0.129.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
]
